WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13695
REGRESSION (
r21387
): Replaced elements' highlight rects are wrongly positioned
https://bugs.webkit.org/show_bug.cgi?id=13695
Summary
REGRESSION (r21387): Replaced elements' highlight rects are wrongly positioned
mitz
Reported
2007-05-12 02:08:08 PDT
See the attached test case. Looks like the offset within the containing block is being added twice.
Attachments
Test case
(186 bytes, text/html)
2007-05-12 02:08 PDT
,
mitz
no flags
Details
Pass off the rect in local coordinates to computeAbsoluteRepaintRect()
(8.92 KB, patch)
2007-05-12 02:37 PDT
,
mitz
no flags
Details
Formatted Diff
Diff
Pass off the rect in local coordinates to computeAbsoluteRepaintRect()
(10.13 KB, patch)
2007-05-12 03:03 PDT
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-05-12 02:08:37 PDT
Created
attachment 14509
[details]
Test case
mitz
Comment 2
2007-05-12 02:37:31 PDT
Created
attachment 14510
[details]
Pass off the rect in local coordinates to computeAbsoluteRepaintRect()
mitz
Comment 3
2007-05-12 02:40:26 PDT
Comment on
attachment 14510
[details]
Pass off the rect in local coordinates to computeAbsoluteRepaintRect() RenderListMarker probably needs the same fix, so I'll try to add that.
mitz
Comment 4
2007-05-12 03:03:32 PDT
Created
attachment 14512
[details]
Pass off the rect in local coordinates to computeAbsoluteRepaintRect() Also fixes the list marker regression, which was detected by an existing pixel test!
Dave Hyatt
Comment 5
2007-05-12 03:09:45 PDT
Comment on
attachment 14512
[details]
Pass off the rect in local coordinates to computeAbsoluteRepaintRect() r=me
mitz
Comment 6
2007-05-12 03:34:04 PDT
Actually, the image bug was also covered by a pixel test, fast/overflow/image-selection-highlight.html but it's good to have the new test for the no-overflow case too.
Sam Weinig
Comment 7
2007-05-12 19:53:31 PDT
Landed in
r21436
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug