LayoutTests:

Reviewed by Hyatt.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=13695
          REGRESSION (r21387): Replaced elements' highlight rects are wrongly positioned

        * fast/replaced/selection-rect-expected.checksum: Added.
        * fast/replaced/selection-rect-expected.png: Added.
        * fast/replaced/selection-rect-expected.txt: Added.
        * fast/replaced/selection-rect.html: Added.

WebCore:

        Reviewed by Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13695
          REGRESSION (r21387): Replaced elements' highlight rects are wrongly positioned

        Test: fast/replaced/selection-rect.html

        Also fixes the same problem with list markers, covered by existing test
        fast/lists/markers-in-selection.html.

        * rendering/RenderListMarker.cpp:
        (WebCore::RenderListMarker::selectionRect):
        * rendering/RenderReplaced.cpp:
        (WebCore::RenderReplaced::selectionRect):



Canonical link: https://commits.webkit.org/17880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21436 268f45cc-cd09-0410-ab3c-d52691b4dbfc